k8s/paymentapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paymentapp
spec:
  rules:
    - http:
      paths:
        - path: /reservations/*
          pathType: ImplementationSpecific
          backend:
            service:
              name: reservations
              port:
                number: 3004
        - path: /auth/*
          pathType: ImplementationSpecific
          backend:
            service:
              name: auth-
              port:
                number: 3002
